"Fix button Text alignment"

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1 {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  text-align: left;
   border-color: black;
   border-style: solid;
   border-bottom: none;
@@ -21,7 +21,6 @@ h1 {
   margin: auto;
   margin-top: 10%;
   background-color: blueviolet;
-
   opacity: 0.94;
 }
 .clickedCorrect {
@@ -56,6 +55,8 @@ p {
   width: 100%;
   height: fit-content;
   border-radius: 2rem;
+  text-align: justify;
   font-size: 1.5rem;
   margin: 0.5rem 0 0.5rem 0;
+  padding-left: 2rem;
 }
